fixed font-stretch value from 0 to normal to correct css from jigsaw validator report

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1614,7 +1614,7 @@ footer a:hover {
 
     h1, h2, h3, h4, h5, h6 {
         font-weight: 600;
-        font-stretch: 0;
+        font-stretch: normal;
         font-size: 1.2rem!important; //need to overide bootstrap default h
     }
 
